# cicd-automate-the-monotony

./: .gitignore  .python-version  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  template.env  tox.ini
.github/workflows/: build-and-deploy-image.yml  build-and-push-release.yml  deploy-infrastructure.yml  release-please.yml  test-pull-requests.yml  test-release-candidate-pr.yml
terraform/: .terraform.lock.hcl  main.tf  variables.tf
terraform/backends/: dev.azure.tfbackend  prod.azure.tfbackend
todo_app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
todo_app/tests/: test_todo_app.py  test_todo_crud.py
