[tool.poetry]
name = "cicd-automate-the-monotony"
version = "0.1.2"
description = "Example application for presentation \"CI/CD - Automated The Monotony\" for Monash University"
authors = ["irate-walrus"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
gunicorn = { version = "^20.1.0", optional = true }
aiosqlite = { version = "^0.17.0", optional = true }
asyncpg = "^0.26.0"
tox-gh-actions = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-benchmark = "^3.4.1"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
tox = "^3.25.1"
aiosqlite = "^0.17.0"

[tool.poetry.extras]
container = ["gunicorn", "aiosqlite"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
